--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,7 +79,7 @@ footer > span:first-child {
   margin-right: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .social-media-list {
     width: 100%;
     font-size: 16px;
@@ -91,7 +91,7 @@ footer > span:first-child {
 
   main {
     padding: 0 20px;
-    margin-top: 75px
+    margin-top: 75px;
   }
 
   header {
